--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@
     display: flex;
     flex-direction: column;
     background-image: url(/startsida_host_v2.97487e7b.fill-2000x800.jpg);
-    background-size: auto;
     background-repeat:no-repeat ;
     background-position: center;
 }
@@ -40,4 +39,13 @@
 
 .list-container div {
     margin: 3px;
+}
+
+.second-menu-container {
+    display: flex;
+}
+
+.second-menucontainer-space {
+    flex: 1;
+    background-color: greenyellow;
 }
